--- a/styles/style.css
+++ b/styles/style.css
@@ -37,6 +37,7 @@ body {
   font-family: "Inter", sans-serif;
   font-style: italic;
   color: rgb(230, 83, 60);
+  margin-top: 2rem;
   font-size: 2.25rem;
   font-weight: 800;
   line-height: 1.2;
@@ -53,6 +54,9 @@ body {
 
 .nav-options {
   position: relative;
+}
+#bar-option{
+  display: hidden;
 }
 
 .nav-options ul {
@@ -80,7 +84,7 @@ body {
 
 .home-button {
   padding: 0.5rem 0.5rem;
-  font-size: 1rem;
+  font-size: 0.5rem;
   height: 0.005rem;
   font-weight: 600;
   background: rgb(230, 83, 60);
@@ -230,9 +234,9 @@ body {
 }
 
 /* Extra mile run section */
-.extra-mile{
+/* .extra-mile{
     width: 100%;
-}
+} */
 .extra-mile-run{
     border-radius: 0.75rem;
     background: rgb(34, 34, 34);
@@ -268,7 +272,8 @@ body {
     margin-left: 2rem;
 }
 .extra-mile-img{
-    width: 100%;
+    width: 22rem;
+    height: 19.5rem;
 }
 .extra-mile-img img{
   
@@ -277,22 +282,311 @@ body {
     border-radius: 0.75rem;
    height: 290px;
    right: 1.5rem;
-   
-
+}
+/* package planing */
+.package{
+  background-color: rgba(48, 48, 48, 0.54);
+  margin-top: 6rem;
+  margin-left: 36rem;
+}
+.membership-plan h2{
+  margin-top: 4rem;
+  margin-bottom: 4rem;
+  margin-left: 26rem;
+  font-size: 3rem;
+  font-family: "Inter", sans-serif;
+}
+.membership-div{
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    justify-content: space-between;
+    grid-gap:30px;
+    background-color: rgba(48, 48, 48, 0.54);
+    margin: 2rem 4rem;
+    padding: 2rem 2rem;
+    border-radius: 2rem;
+}
+.card{
+    height: 16.5rem;
+    width: 19.375rem;
+    box-shadow: 5px 5px 15px gray;
+    border-radius: 2rem;
+    padding: 1rem 2.8rem;
+    display: inline;
+    justify-content: space-between;
+}
+.card h3{
+  font-family: "Inter", sans-serif;
+  width: 17rem;
+  font-size: 1.5rem;
+  margin-left: -1rem;
+  margin-bottom: 1rem;
+  color: chocolate;
+}
+.card>ul{
+  display: inline;
+  justify-content: space-between;
+}
+.card>ul>li{
+  height: 2.3rem;
+  width: 13rem;
+  gap: 0.8rem;
+}
+.member{
+  height: 2.5rem;
+  width: 8rem;
+  font-size: 1rem;
+  margin:  0.5rem ;
+  margin-left: 0.2rem;
+  padding: 0.5rem;
+  text-align: center;
 }
 
+/* BMI Calculator */
+.BMI-calculator-form{
+  display: flex;
+  flex-direction: row;
+}
+.calculator{
+    margin-top: 1.5rem;
+}
+.calculator-chart{
+  width: 35rem;
+  height: 16.5rem;
+  margin-left: 10.5rem;
+  padding: 1.5rem;
+}
+.calculator-table{
+  width: 30rem;
+  height: 12.5rem;
+  margin-left: 1.5rem;
+  border: 1px solid white;
+}
+.table-caption{
+  width: 22rem;
+  height: 2.125rem;
+  font-size: 28px;
+  font-weight: 900;
+  margin-bottom: 1.5rem;
+  text-align: left;
+}
+
+.BMI-calculator h3{
+    font-size: 3rem;
+    font-weight: 900;
+    margin-left: 20rem;
+    margin-top: 8rem;
+}
+.BMI-calculator p{
+    margin-left: 20rem;
+}
+.calculator-table{
+  position: absolute;
+  width: 10rem;
+  height: 14.5rem;
+  left: 189px;
+}
+#thead, #tbody{
+  text-align: left;
+  
+
+}
+#thead{
+  margin-top: 3.5rem;
+}
+
+th, td{
+  border: 1px solid rgba(255, 255, 255, 0.281);
+}
+.BMI-calculator-form{
+  margin-top: 5rem;
+  width: 100%;
+  height: 487px;
+  background-color: rgb(34, 34, 34);
+}
+.calculator-form{
+  width: 40rem;
+  height: 16.8rem;
+  margin-top: 1.5rem;
+  margin-right: 3.8rem;
+  padding-left: 0.5rem;
+}
+.calculator-text{
+  margin: 0.875rem auto;
+}
+.calculator-text h3{
+  margin-top: -0.85rem;
+  width: 27.68rem;
+  height: 2.212rem;
+  font-size: 1.75rem;
+  font-weight: 900;
+  
+}
+.calculator-text p{
+  width: 35rem;
+  height: 2.212rem;
+  font-size: 0.875rem;
+  font-weight: 400;
+  margin-top: 1rem;
+}
+.form-section{
+  width: 36.06rem;
+  height: 24.125rem;
+  padding: 0.5rem;
+}
+.value1{
+  display: flex;
+  flex-direction: row;
+  
+}
+#input, #select{
+  width: 17rem;
+  height: 3rem;
+  display: flex;
+  flex-direction: row;
+  gap: 0.25rem;
+  border-radius: 0.30rem;
+  background: rgba(255, 255, 255, 0.1);
+  color: rgba(255, 255, 255, 0.9);
+  margin-bottom: 1rem;
+  margin-left: -0.5rem;
+  margin-right: 1.5rem; 
+}
+#select2{
+  width: 34.3rem;
+  height: 3rem;
+  margin-left: -0.5rem;
+  border-radius: 0.25rem;
+  background: rgba(255, 255, 255, 0.1);
+  color: rgba(255, 255, 255, 0.9);
+}
+
+.team-meeting h3{
+  width: 364px;
+  height: 58px;
+  font-size: 3rem;
+  font-weight: 900;
+  margin-left: 27.625rem;
+  margin-top: 5.5rem;
+  margin-bottom: 1.5rem;
+}
+.team-meeting p{
+  width: 41.93rem;
+  height: 3rem;
+  color: rgba(255, 255, 255, 0.5);
+  font-size: 0.875rem;
+  font-weight: 400;
+  text-align: center;
+  margin-left: 15.625rem;
+  margin-bottom: 0.75rem;
+}
+
+#team-div{
+  margin-left: 3rem;
+  display: grid;
+  grid-template-columns: auto auto auto ;
+  gap: 10px;
+  padding: 2rem;
+  height: 34rem;
+  width: 66.25rem;
+  border-radius: 10px;
+  background: rgba(255, 255, 255, 0.1);
+
+}
+#team-div>div>img {
+  width: 18.41rem;
+  height: 14rem;
+  margin-left: 0.15rem;
+  margin-right: 2.97rem;
+  margin-bottom: 0.15rem;
+  border-radius: 10px;
+}
+.img-card{
+  position: relative;
+}
+#team-div>div>h4{
+  position: absolute;
+  top: 175px;
+  left: 20px;
+  color: rgb(255, 255, 255);
+  transform: translate(-5% , -40%);
+}
+#team-div>div>h5{
+  position: absolute;
+  top: 195px;
+  left: 20px;
+  color: rgba(240, 255, 255, 0.623);
+  transform: translate(-8% , -40%);
+}
+
+/* Footer Section */
+footer{
+  background: rgba(255, 255, 255, 0.1);
+  margin-top: 6rem;
+  height: 25rem;
+}
+.footer-section{
+  display: grid;
+  grid-template-columns: 2fr 1fr 1fr;
+  
+}
+.footer1{
+  width: 27.68rem;
+  height: 11rem;
+  margin-top: 6rem;
+  margin-left: 8rem;
 
 
+}
+.logo{
+  margin-bottom: 2rem;
+  font-size: 3.5rem;
+  
+}
+.footer1 p{
+  font-size: 0.875rem;
+  color: rgba(255, 255, 255, 0.5);
+}
 
+.footer2, .footer3{
+  width: 12rem;
+  height: 11rem;
+  margin-top: 6rem;
+  margin-left: 4rem;
+}
+.footer3 {
+  margin-left: 4rem;
+}
+.footer2 h5{
+  font-size: 2rem;
+  font-weight: 700;
+  margin-bottom: 1.5rem;
+}
+.footer3 h5{
+  font-size: 2rem;
+  font-weight: 700;
+  margin-bottom: 1.5rem;
+}
+.footer2 p{
+  font-size: 1.25rem;
+ 
+  
+  color: rgba(255, 255, 255, 0.5);
+}
+.footer3 p{
+  font-size: 1.25rem;
+  
+  color: rgba(255, 255, 255, 0.5);
+}
 
-
-
-
-
-
-
-
-
+.footer-text{
+  color: rgb(90, 90, 93);
+  font-size: 1rem;
+  font-weight: 400;
+  margin-top: 4rem;
+  margin-left: 36.18rem ;
+  width: 19rem;
+}
 
 
 
@@ -333,56 +627,26 @@ body {
   }
 }
 
-@media (max-width: 768px) {
-  .nav-options ul {
+
+@media (max-width: 576px) { 
+
+  .nav-options{
     display: none;
   }
-
-  .nav-options .bar-option {
-    display: block;
-    cursor: pointer;
-    color: #fff;
-    font-size: 1.5rem;
+  #bar-option{
+  display: block;
   }
-
-  .nav-options .bar-option i {
-    font-size: 1.5rem;
-  }
-
-  .popular-section {
-    grid-template-columns: 1fr;
-    text-align: center;
-  }
-
-  .text-content {
-    align-items: center;
-  }
-
-  .text-content h3,
-  .text-content .span {
-    font-size: 2rem;
-  }
-
-  #badge,
-  #video-badge {
-    position: static;
-    margin: 1rem auto;
-  }
-
-  .habit-images {
-    flex-direction: column;
-    align-items: center;
-  }
-
-  .btn-primary {
-    width: 100%;
-    text-align: center;
-  }
-}
-
-@media (max-width: 576px) {
   .logo h3 {
     font-size: 1.5rem;
+  }
+  #badge,
+  #video-badge {
+    margin-top: 25rem;
+    width: 140px;
+    padding: 0.75rem;
+  }
+  #video-badge{
+    margin-right: 5rem;
   }
 
   .text-content h3 {
